# This was generated on running 'cargo new HelloCargo', not bad ngl
[package]
name = "HelloCargo"
version = "0.1.0"
authors = ["SpiderMath <71999854+SpiderMath@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
